# ssim

./: LICENSE  Makefile  README.Legal  README.md  ReadMe  config.h  config.h.in  configure  configure.in  makefile.in
cmd/: Makefile  main.cpp  main.hpp
ctrafo/: Makefile  colortransformer.cpp  colortransformer.hpp
global/: Makefile  exceptions.cpp  exceptions.hpp  matrix.hpp  matrixbase.hpp  ptrarray.cpp  ptrarray.hpp  types.hpp
img/: Makefile  component.cpp  component.hpp  image.cpp  image.hpp
io/: Makefile  bytestream.cpp  bytestream.hpp  filestream.cpp  filestream.hpp
ssim/: Makefile  ssimIndex.cpp  ssimIndex.hpp
std/: Makefile  assert.hpp  errno.hpp  math.cpp  math.hpp  stdarg.hpp  stdio.cpp  stdio.hpp  stdlib.cpp  stdlib.hpp  string.hpp
vif/: Makefile  vifIndex.cpp  vifIndex.hpp
wavelet/: Makefile  band.cpp  band.hpp  filter.cpp  filter.hpp  line.cpp  line.hpp
